<resources>
    <string name="app_name">Taekwondo Tournament System</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button5">5</string>
    <string name="button4">4</string>
    <string name="configuration">Configuration</string>
    <string name="wifi_network_name">WiFi network name:</string>
    <string name="change_wifi_network">Change Wifi</string>
    <string name="no_wifi_selected">Not selected</string>
    <string name="phone_ip_adress">Phone IP address:</string>
    <string name="none">None</string>
    <string name="lap_top_app_name">Laptop application name:</string>
    <string name="laptop_ip_address">Laptop IP address</string>
    <string name="proceed">Proceed</string>
    <string name="error_configuration_failed">Configuration failed! Please try to change Wifi network to establish connection with laptop main application. You can not proceed on next screen without established connection.</string>
    <string name="select_wifi">SELECT WIFI</string>
    <string name="not_connected_on_wifi">Wifi Connection is turned off. Please turn on Wifi on your mobile device.</string>
    <string name="laptop_ip_unreachable">Application can not find laptop ip address on this wifi network</string>
    <string name="connecting_to_network">Connecting with laptop application. Please wait ...</string>
    <string name="closing_app_message">Are you sure that you want to close application</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="undo">UNDO</string>
    <string name="ok">Ok</string>
    <string name="tryagain">Try again</string>
    <string name="send">Send</string>
    <string name="zero">0</string>
    <string name="optional">Optional</string>
    <string name="designated">Designated</string>
    <string name="technical_content">Technical content</string>
    <string name="power">Power</string>
    <string name="balance">Balance</string>
    <string name="breathe_control">Breathe control</string>
    <string name="rhytm">Rhytm</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="technique">Technique</string>
    <string name="fight">Fight</string>
    <string name="pattern">Pattern</string>
    <string name="sparring">Sparring</string>
</resources>
