<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:weightSum="6"
    android:layout_margin="@dimen/text_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSendLeft"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/send"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/lblScoreLeft"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:gravity="center"
            android:textSize="35dp"
            android:textColor="@android:color/holo_red_dark"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnOptional"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/optional"
            android:textColor="@color/primary_text"
            android:background="@drawable/techique_button_selector"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnDesignated"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/designated"
            android:textColor="@color/primary_text"
            android:background="@drawable/techique_button_selector"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/lblScoreRight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:gravity="center"
            android:textSize="35dp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnSendRight"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/send"
            android:layout_height="match_parent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:weightSum="6"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnRedDecrease"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="45dp"
            android:background="@color/red"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/lblRedScore"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:text="@string/zero"
            android:gravity="center"
            android:textSize="45dp"
            android:textColor="@color/red"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnRedIncrease"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="45dp"
            android:text="@string/plus"
            android:background="@color/red"
            android:layout_height="match_parent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_weight="2">


        <Button
            android:id="@+id/btnBlueDecrease"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="45dp"
            android:background="@color/blue"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/lblBlueScore"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:text="@string/zero"
            android:gravity="center"
            android:textSize="45dp"
            android:textColor="@color/blue"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnBlueIncrease"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="45dp"
            android:text="@string/plus"
            android:background="@color/blue"
            android:layout_height="match_parent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="5"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnTechnicalContent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/technical_content"
            android:textColor="@color/primary_text"
            android:background="@drawable/techique_button_selector"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnPower"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/power"
            android:textColor="@color/primary_text"
            android:background="@drawable/techique_button_selector"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnBalance"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/balance"
            android:textColor="@color/primary_text"
            android:background="@drawable/techique_button_selector"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnBreatheControl"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/breathe_control"
            android:textColor="@color/primary_text"
            android:background="@drawable/techique_button_selector"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnRhytm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/rhytm"
            android:textColor="@color/primary_text"
            android:background="@drawable/techique_button_selector"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>